crates/vue_oxlint_jsx/src/test/snapshots/codegen/codegen_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
async () => {
	<><template>
  <div v-bind:__v_1foo__={bar} />
</template>
</>;
};
