crates/vue_oxlint_jsx/src/test/snapshots/codegen/components_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
import SomeComponent from'./SomeComponent.vue';import{motion}from'motion-v';async()=>{<><template><SomeComponent/><SomeComponent/><Transition></Transition><component></component><motion.div></motion.div></template><script lang="ts" setup></script></>};
