crates/vue_oxlint_jsx/src/test/snapshots/codegen/directive_basic_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/mod.rs
expression: "&codegen"
---
async()=>{<><template><div v-bind:class={`w-100`}/><div v-bind:__v_some___={{[some]:2}}/><Some v-slot:default={undefined}/>{{default:({a})=><></>}}<input v-model:__v___={text}/><Some v-bind:__v_some_none__={1}/><div v-bind:id={id}/><div v-bind:msg-id={msgId}/><div{...{id:`app`,class:`w-100`}}/><div{...{id:`app`}}/><div v-bind:__v_1foo__={bar}/></template></>};
