crates/vue_oxlint_jsx/src/test/snapshots/codegen/directive_v-for_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
async()=>{<><template>{(source)((item)=>(<div v-for:__v___={undefined}></div>))}{(source1)((item1)=>(<div v-for:__v___={undefined}></div>))}{(source2)((item2,index2)=>(<div v-for:__v___={undefined}></div>))}{(source3)((item3='1',index3=99)=>(<div v-for:__v___={undefined}></div>))}{(users4)(({id4,name4})=>(<div v-for:__v___={undefined}></div>))}{(users5)(({id5,name5},index)=>(<div v-for:__v___={undefined}></div>))}{(users6)(({id6=1,name6='Liang'},index)=>(<div v-for:__v___={undefined}></div>))}{(someObj7)((key7,value7,index7)=>(<div v-for:__v___={undefined}></div>))}{(someIter8)(([item8,index8])=>(<div v-for:__v___={undefined}></div>))}{(someIter9)(([item9='hi',index9])=>(<div v-for:__v___={undefined}></div>))}</template></>};
