crates/vue_oxlint_jsx/src/test/snapshots/codegen/directive_v-if-error_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
async () => {
	<><template>
  <div v-else-if:__v___={undefined} />
  <div v-else:__v___ />

  
  {1 ? <><div v-if:__v___={undefined} /></> : undefined}<div v-if:__v___={undefined} />
  <div v-if:__v___ />
  <div v-else-if:__v___={undefined} />
  <div v-else-if:__v___ />
</template>

</>;
};
