crates/vue_oxlint_jsx/src/test/snapshots/codegen/directive_v-slot_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
async () => {
	<><template>
  <Comp v-slot:__v__={undefined}>{{ default: ({ message }) => <></> }}</Comp>
  <Comp v-slot:header={undefined}>{{ header: ({ message }) => <>
    {message}
  </> }}</Comp>
  <Comp v-slot:abc>{{ abc: () => <> abc </> }}</Comp>
  <Comp v-slot:__v__ />{{ default: () => <></> }}
  <Comp v-slot:header={undefined}>{{ header: ({ message }) => <>
    {message}
  </> }}</Comp>
  <Comp v-slot:__v__={undefined}>{{ default: ({ message }) => <>
    {message}
  </> }}</Comp>
  <Comp v-slot:__v_key__={undefined}>{{ [key]: ({ message }) => <>
    {message}
  </> }}</Comp>
  <Comp v-slot:header={undefined}>{{ header: (user) => <>
    {user.name}
  </> }}</Comp>
</template>
</>;
};
