crates/vue_oxlint_jsx/src/test/snapshots/codegen/error_empty_multiple_scripts_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/mod.rs
expression: "&codegen"
---
const a = 1;
async () => {
	<><script></script><script></script></>;
};
